--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "express-winston": "^4.2.0",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
-    "mastra": "^0.0.0-ai-v5-20250813235735",
+    "mastra": "^0.10.23",
     "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
