--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "@ai-sdk/azure": "^2.0.10",
     "@ai-sdk/openai": "^2.0.10",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/core": "^0.0.0-ai-v5-20250813235735",
-    "@mastra/libsql": "^0.11.2",
-    "@mastra/loggers": "^0.10.4",
-    "@mastra/memory": "^0.0.0-ai-v5-20250813235735",
-    "@mastra/mongodb": "^0.12.2",
+    "@mastra/core": "^0.14.1",
+    "@mastra/libsql": "^0.13.4",
+    "@mastra/loggers": "^0.10.7",
+    "@mastra/memory": "^0.13.1",
+    "@mastra/mongodb": "^0.13.3",
+    "@mastra/rag": "^1.1.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
+    "@opentelemetry/core": "^2.0.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
@@ -47,13 +49,14 @@
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "express-winston": "^4.2.0",
+    "gpt-tokenizer": "^3.0.1",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
-    "mastra": "^0.0.0-ai-v5-20250813235735",
     "mongodb": "^6.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
@@ -76,6 +79,7 @@
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "globals": "^16.3.0",
+    "mastra": "^0.10.23",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
