--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "dev:staging": "DEPLOYMENT_ENV=staging yarn dev",
     "dev:prod": "DEPLOYMENT_ENV=production yarn dev",
+    "deploy:staging": "dotenv -- sh scripts/deploy.sh",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
     "e2e": "vitest --project e2e",
@@ -45,6 +46,7 @@
     "ai": "^5.0.15",
     "braintrust": "^0.2.1",
     "cors": "^2.8.5",
+    "dotenv-cli": "^10.0.0",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
