--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mastra:dev": "mastra dev -p 4111",
     "mastra:build": "mastra build",
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
-    "mastra:full": "yarn mastra:build && yarn mastra:start"
+    "mastra:full": "yarn mastra:build && yarn mastra:start",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ai-sdk/azure": "^2.0.10",
@@ -82,6 +83,8 @@
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
     "mastra": "^0.10.23",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
