--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "format:check": "prettier --check src/**/*.ts",
     "run-analyzer": "ts-node -r tsconfig-paths/register src/mastra/tests/scripts/run-log-analyzer.ts",
     "test-thinking-agent": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/test-thinking-agent.ts",
+    "chat-with-staging": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/chat-with-staging.ts",
     "mastra:dev": "mastra dev -p 4111",
     "mastra:build": "mastra build",
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
