--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "mongodb": "^6.18.0",
+    "query-string": "^9.2.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
