--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -37,6 +37,7 @@ env:
   DEPLOYMENT_ENV: prod
   DB_NAME: sage
   OTEL_EXPORTER_OTLP_ENDPOINT: https://api.braintrust.dev/otel
+  BRAINTRUST_PARENT: project_name:sage-prod
 
 
 envSecrets:
