--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
     "run-analyzer": "ts-node -r tsconfig-paths/register src/mastra/tests/scripts/run-log-analyzer.ts",
+    "test-thinking-agent": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/test-thinking-agent.ts",
+    "chat-with-staging": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/chat-with-staging.ts",
     "mastra:dev": "mastra dev -p 4111",
     "mastra:build": "mastra build",
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
@@ -57,7 +59,9 @@
     "gpt-tokenizer": "^3.0.1",
     "gql": "^1.1.2",
     "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "mongodb": "^6.18.0",
+    "query-string": "^9.2.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
