--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-run": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "dev:staging": "NODE_ENV=staging yarn dev-run",
     "dev:prod": "NODE_ENV=production yarn dev-run",
-    "deploy:staging": "dotenv -- sh scripts/deploy.sh",
+    "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
     "e2e": "vitest --project e2e",
@@ -52,7 +52,6 @@
     "ai": "^5.0.15",
     "braintrust": "^0.2.5",
     "cors": "^2.8.5",
-    "dotenv-cli": "^10.0.0",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
@@ -82,6 +81,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoevals": "^0.0.131",
+    "dotenv-flow-cli": "^1.1.1",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
