--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -38,6 +38,7 @@ env:
   DB_NAME: sage
   OTEL_EXPORTER_OTLP_ENDPOINT: https://api.braintrust.dev/otel
   BRAINTRUST_PARENT: project_name:sage-prod
+  BRAINTRUST_PROJECT: sage-prod
 
 
 envSecrets:
