--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -37,6 +37,8 @@ env:
   DEPLOYMENT_ENV: staging
   DB_NAME: sage
   OTEL_EXPORTER_OTLP_ENDPOINT: https://api.braintrust.dev/otel
+  BRAINTRUST_PARENT: project_name:sage-staging
+  BRAINTRUST_PROJECT: sage-staging
 
 
 envSecrets:
