--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -34,7 +34,7 @@ env:
   PORT: 8080
   OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
   HONEYCOMB_TEAM: sage
-  DEPLOYMENT_ENV: prod
+  NODE_ENV: production
   DB_NAME: sage
   OTEL_EXPORTER_OTLP_ENDPOINT: https://api.braintrust.dev/otel
   BRAINTRUST_PARENT: project_name:sage-prod
