--- a/.env.defaults
+++ b/.env.defaults
@@ -3,6 +3,7 @@ END_USER_HEADER_ID=sage
 
 # Evergreen
 EVERGREEN_API_USER=sage
+EVERGREEN_API_KEY=mysecret
 USER_NAME=regular
 
 # DB
@@ -18,5 +19,4 @@ LOG_TO_FILE=true
 # Secrets
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_ENDPOINT=
-EVERGREEN_API_KEY=
 OTEL_COLLECTOR_URL=
