--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "@sentry/node": "^10.5.0",
+    "@sentry/profiling-node": "^10.5.0",
     "ai": "^5.0.15",
     "braintrust": "^0.2.5",
     "cors": "^2.8.5",
