--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -33,6 +33,7 @@ env:
   EVERGREEN_GRAPHQL_ENDPOINT: https://evergreen.mongodb.com/mcp/graphql/query
   PORT: 8080
   OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
+  OTEL_LOG_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/logs
   HONEYCOMB_TEAM: sage
   NODE_ENV: production
   DB_NAME: sage
@@ -60,6 +61,7 @@ serviceAccount:
        - POST
        paths:
        - /v1/traces
+       - /v1/logs
        - /opentelemetry.proto.collector.trace.v1.TraceService/Export
        - /opentelemetry.proto.collector.logs.v1.LogsService/Export
        - /opentelemetry.proto.collector.metrics.v1.MetricsService/Export
