--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,7 @@ EVERGREEN_URL=https://evergreen.mongodb.com
 
 # Observability
 OTEL_EXPORTER_OTLP_ENDPOINT=https://api.braintrust.dev/otel
+
+# Server config
+PORT=8080
+CORS_ORIGIN=https://parsley-local.corp.mongodb.com:8444
