--- a/.env.staging
+++ b/.env.staging
@@ -6,3 +6,7 @@ EVERGREEN_URL=https://evergreen.mongodb.com
 # Observability
 OTEL_COLLECTOR_URL=http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
 OTEL_EXPORTER_OTLP_ENDPOINT=https://api.braintrust.dev/otel
+
+# Server Config
+PORT=8080
+CORS_ORIGIN=https://parsley-local.corp.mongodb.com:8444
