--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
     "eval": "npx braintrust eval --no-send-logs src/evals/",
-    "eval:send_to_braintrust": "npx braintrust eval src/evals/"
+    "eval:send_to_braintrust": "npx braintrust eval"
   },
   "dependencies": {
     "@ai-sdk/azure": "^2.0.10",
@@ -50,8 +50,8 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
-    "@sentry/node": "^10.5.0",
-    "@sentry/profiling-node": "^10.5.0",
+    "@sentry/node": "^10.10.0",
+    "@sentry/profiling-node": "^10.10.0",
     "ai": "^5.0.15",
     "braintrust": "^0.2.5",
     "cors": "^2.8.5",
@@ -94,8 +94,8 @@
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.5",
     "junit-report-builder": "^5.1.1",
+    "lint-staged": "^16.1.5",
     "mastra": "^0.10.23",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
