--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -60,6 +60,7 @@ serviceAccount:
        - POST
        paths:
        - /v1/traces
+       - /v1/logs
        - /opentelemetry.proto.collector.trace.v1.TraceService/Export
        - /opentelemetry.proto.collector.logs.v1.LogsService/Export
        - /opentelemetry.proto.collector.metrics.v1.MetricsService/Export
