--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.204.0",
     "@opentelemetry/sdk-node": "^0.204.0",
     "@opentelemetry/sdk-trace-base": "^2.1.0",
+    "@opentelemetry/winston-transport": "^0.14.1",
     "@sentry/node": "^10.5.0",
     "@sentry/profiling-node": "^10.5.0",
     "ai": "^5.0.33",
