--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
     "@graphql-codegen/cli": "^5.0.7",
+    "@opentelemetry/instrumentation-winston": "^0.48.1",
     "@opentelemetry/propagation-utils": "^0.31.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
