--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,7 @@ steps:
         from_secret: ecr_secret_key
     when:
       event:
-        - pull-request
+        - pull_request
         - push
 
   - name: deploy-staging
