--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
     "eval": "ENABLE_SENTRY_PROFILING=false npx braintrust eval --no-send-logs src/evals/",
-    "eval:send_to_braintrust": "ENABLE_SENTRY_PROFILING=false npx braintrust eval src/evals/"
+    "eval:send_to_braintrust": "ENABLE_SENTRY_PROFILING=false npx braintrust eval src/evals/",
+    "load-dataset": "ts-node-dev src/evals/scripts/dataset.ts"
   },
   "dependencies": {
     "@ai-sdk/azure": "^2.0.24",
@@ -85,6 +86,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoevals": "^0.0.131",
+    "csv-parse": "^6.1.0",
     "dotenv-flow-cli": "^1.1.1",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
