--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
-    "eval": "ENABLE_SENTRY_PROFILING=false npx braintrust eval --no-send-logs src/evals/",
-    "eval:send_to_braintrust": "ENABLE_SENTRY_PROFILING=false npx braintrust eval src/evals/"
+    "eval": "ENABLE_SENTRY_PROFILING=false npx braintrust eval --no-send-logs",
+    "eval:send_to_braintrust": "ENABLE_SENTRY_PROFILING=false npx braintrust eval"
   },
   "dependencies": {
     "@ai-sdk/azure": "^2.0.24",
